ajout des buttons Commander

--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -20,10 +20,10 @@ footer span {
 
 .footer_container p {
     margin-bottom: 0.5em;
-
+    
 }
 
-.fas {
+.fa-utensils, .fa-hands-helping {
     padding-right: 0.5em;
     font-size: 0.8em;
 }
