--- a/css/style.css
+++ b/css/style.css
@@ -255,9 +255,8 @@ section {
 .main_div {
   width: 100%;
   max-width: 768px;
-  margin: 0 auto;
+  margin: -1em auto 0 auto;
   border-radius: 2.5em 2.5em 0 0;
-  margin-top: -1em;
   background-color: #ebebeb;
   padding-top: 2em;
   position: relative;
@@ -414,7 +413,6 @@ header .arrow {
 }
 
 .form_reserv {
-  height: 287px;
   background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
@@ -435,6 +433,15 @@ header .arrow {
 .reserv__cont--bold {
   font-weight: bold;
   font-size: 1.6em;
+}
+
+.form_page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: -2.6em;
+  padding-bottom: 2em;
+  align-items: center;
 }
 
 .fonction {
@@ -656,6 +663,7 @@ button {
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   box-shadow: #26394d 0px 9px 9px -10px;
   transition: 0.4s;
+  cursor: pointer;
 }
 button:hover {
   z-index: 5;
@@ -663,10 +671,6 @@ button:hover {
   font-size: 1.02em;
   box-shadow: #26394d 2px 12px 12px -10px;
   opacity: 0.9;
-}
-
-button {
-  cursor: pointer;
 }
 
 .far .fa-heart {
@@ -697,7 +701,7 @@ footer span {
   margin-bottom: 0.5em;
 }
 
-.fas {
+.fa-utensils, .fa-hands-helping {
   padding-right: 0.5em;
   font-size: 0.8em;
 }
