--- a/sass/layouts/_body.scss
+++ b/sass/layouts/_body.scss
@@ -173,9 +173,9 @@ section {
 .main_div {
     width           : 100%;
     max-width       : 768px;
-    margin          : 0 auto;
+    margin          : -1em auto 0 auto;
     border-radius   : 2.5em 2.5em 0 0;
-    margin-top      : -1em;
+    // margin-top      : -1em;
     background-color: $grey-city;
     padding-top     : 2em;
     position        : relative;
