--- a/sass/layouts/_forms.scss
+++ b/sass/layouts/_forms.scss
@@ -1,5 +1,5 @@
 .form_reserv {
-    // height          : 287px;
+    height          : 287px;
     background-color: #f6f6f6;
     display         : flex;
     flex-direction  : column;
