--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,7 @@ header .arrow {
 }
 
 .form_reserv {
+  height: 287px;
   background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
