--- a/css/style.css
+++ b/css/style.css
@@ -123,19 +123,14 @@ section {
   padding: 1rem 0.7rem;
   font-family: "Roboto", sans-serif;
   font-size: 1.1em;
-}
-
-#restaurant {
   width: 100%;
   background-color: #ebebeb;
   padding-top: 1.5rem;
 }
-
-.shrik {
+section .shrik {
   margin: auto;
 }
-
-.resto {
+section .resto {
   width: 85%;
   max-width: 870px;
   display: flex;
@@ -145,10 +140,24 @@ section {
   justify-content: center;
   margin: auto;
 }
-.resto_card {
+section .resto img {
+  width: 335px;
+  max-width: 335px;
+  height: 251px;
+  max-height: 251px;
+  object-fit: cover;
+  border-radius: 1em;
+  margin: 1em;
+  box-shadow: rgba(38, 57, 77, 0.64) 0px 9px 13px -3px;
+  transition: 0.3s;
+}
+section .resto img:hover {
+  box-shadow: rgba(38, 57, 77, 0.9) 0px 17px 16px -4px;
+}
+section .resto_card {
   position: relative;
 }
-.resto .nouveau {
+section .resto .nouveau {
   position: absolute;
   display: block;
   background-color: #99E2D0;
@@ -167,21 +176,6 @@ section {
   margin-left: 17.9em;
   margin-top: -18em;
   font-weight: bold;
-}
-
-.resto img {
-  width: 335px;
-  max-width: 335px;
-  height: 251px;
-  max-height: 251px;
-  object-fit: cover;
-  border-radius: 1em;
-  margin: 1em;
-  box-shadow: rgba(38, 57, 77, 0.64) 0px 9px 13px -3px;
-  transition: 0.3s;
-}
-.resto img:hover {
-  box-shadow: rgba(38, 57, 77, 0.9) 0px 17px 16px -4px;
 }
 
 .cartouche {
@@ -244,6 +238,14 @@ section {
   padding-left: 1em;
 }
 
+.titre_img {
+  margin: 0 auto;
+  display: block;
+  max-width: 1024px;
+  height: 260px;
+  object-fit: cover;
+}
+
 .main_div {
   width: 100%;
   max-width: 768px;
@@ -254,13 +256,18 @@ section {
   position: relative;
   top: -2.6em;
 }
-
-.titre_img {
-  margin: 0 auto;
-  display: block;
-  max-width: 1024px;
-  height: 260px;
-  object-fit: cover;
+.main_div .titre_coeur {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+.main_div .titre_coeur .favorite-checkbox {
+  font-size: 1.5em;
+  padding-bottom: 11px;
+  padding-right: 10px;
 }
 
 .resto_titre_img {
@@ -317,11 +324,6 @@ section {
   right: 26px;
 }
 
-.prix {
-  font-weight: bold;
-  transition: all 0.4s ease-out;
-}
-
 .carte__1 {
   animation: slideup ease-in-out 0.5s;
 }
@@ -344,14 +346,6 @@ section {
     transform: translateY(0px);
   }
 }
-.condiment {
-  display: inline-block;
-  font-size: 0.9em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .box__menu {
   display: flex;
   flex-wrap: nowrap;
@@ -360,19 +354,16 @@ section {
   align-items: flex-end;
   margin-top: 0.4em;
 }
-
-.titre_coeur {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: center;
-  align-items: center;
-  justify-content: space-between;
+.box__menu .condiment {
+  display: inline-block;
+  font-size: 0.9em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.titre_coeur .favorite-checkbox {
-  font-size: 1.5em;
-  padding-bottom: 11px;
-  padding-right: 10px;
+.box__menu .prix {
+  font-weight: bold;
+  transition: all 0.4s ease-out;
 }
 
 html {
@@ -413,17 +404,16 @@ header .arrow {
   justify-content: space-evenly;
   align-items: center;
 }
-
-.reserv {
+.form_reserv .reserv {
   display: flex;
   flex-flow: column;
   align-items: center;
 }
-.reserv__cont {
+.form_reserv .reserv__cont {
   display: inline-block;
   font-size: 1.1em;
 }
-.reserv__cont--bold {
+.form_reserv .reserv__cont--bold {
   font-weight: bold;
   font-size: 1.6em;
 }
@@ -445,8 +435,7 @@ header .arrow {
   justify-content: space-evenly;
   align-items: center;
 }
-
-.fonction__cont {
+.fonction .fonction__cont {
   text-decoration: none;
   display: flex;
   flex-direction: row;
@@ -463,13 +452,36 @@ header .arrow {
   color: black;
   transition: 0.3s;
 }
-.fonction__cont:hover, .fonction__cont:focus {
+.fonction .fonction__cont .mobile::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f3cd";
+  padding-right: 1.5em;
+  padding-left: 0.6em;
+  color: #858585;
+}
+.fonction .fonction__cont .list::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f0ca";
+  padding-right: 1.5em;
+  padding-top: 0.5em;
+  color: #858585;
+}
+.fonction .fonction__cont .store::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f54e";
+  padding-right: 1.5em;
+  color: #858585;
+}
+.fonction .fonction__cont:hover, .fonction .fonction__cont:focus {
   box-shadow: #26394da2 2px 14px 14px -10px;
 }
-.fonction__cont:hover .purple::before, .fonction__cont:focus .purple::before {
+.fonction .fonction__cont:hover .purple::before, .fonction .fonction__cont:focus .purple::before {
   color: #9356DC;
 }
-.fonction__cont .dot {
+.fonction .fonction__cont .dot {
   position: absolute;
   left: -0.7em;
   height: 25px;
@@ -479,36 +491,6 @@ header .arrow {
   border-radius: 1em;
   padding-left: 0.45em;
   padding-top: 0.19em;
-}
-
-.purple::before {
-  font-size: 1.2em;
-}
-
-.mobile::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f3cd";
-  padding-right: 1.5em;
-  padding-left: 0.6em;
-  color: #858585;
-}
-
-.list::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f0ca";
-  padding-right: 1.5em;
-  padding-top: 0.5em;
-  color: #858585;
-}
-
-.store::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f54e";
-  padding-right: 1.5em;
-  color: #858585;
 }
 
 .lds-spinner {
