--- a/sass/layouts/_body.scss
+++ b/sass/layouts/_body.scss
@@ -18,73 +18,68 @@
     }
 }
 
-
 section {
-    padding    : 1rem 0.7rem;
-    font-family: 'Roboto', sans-serif;
-    font-size  : 1.1em;
-}
-#restaurant {
+    padding         : 1rem 0.7rem;
+    font-family     : 'Roboto', sans-serif;
+    font-size       : 1.1em;
     width           : 100%;
     background-color: $grey-city;
     padding-top     : 1.5rem;
-}
 
-.shrik {
-    margin: auto;
-}
-
-.resto {
-    width          : 85%;
-    max-width      : 870px;
-    display        : flex;
-    flex-direction : row;
-    flex-wrap      : wrap;
-    align-content  : center;
-    justify-content: center;
-    margin         : auto;
-
-    &_card {
-        position: relative;
+    .shrik {
+        margin: auto;
     }
 
-    .nouveau {
-        position        : absolute;
-        display         : block;
-        background-color: #99E2D0;
-        color           : $darken-green;
-        z-index         : 80;
-        height          : 30px;
-        width           : 80px;
-        text-align      : center;
-        font-size       : 0.8em;
-        border-radius   : 3px;
-        height          : 30px;
-        display         : flex;
-        justify-content : center;
-        flex-direction  : row;
-        align-items     : center;
-        margin-left     : 17.9em;
-        margin-top      : -18em;
-        font-weight     : bold;
-    }
-}
+    .resto {
+        width          : 85%;
+        max-width      : 870px;
+        display        : flex;
+        flex-direction : row;
+        flex-wrap      : wrap;
+        align-content  : center;
+        justify-content: center;
+        margin         : auto;
 
+        img {
+            width        : 335px;
+            max-width    : 335px;
+            height       : 251px;
+            max-height   : 251px;
+            object-fit   : cover;
+            border-radius: 1em;
+            margin       : 1em;
+            box-shadow   : rgb(38 57 77 / 64%) 0px 9px 13px -3px;
+            transition   : 0.3s;
 
+            &:hover {
+                box-shadow: rgb(38 57 77 / 90%) 0px 17px 16px -4px;
+            }
+        }
 
-.resto img {
-    width        : 335px;
-    max-width    : 335px;
-    height       : 251px;
-    max-height   : 251px;
-    object-fit   : cover;
-    border-radius: 1em;
-    margin       : 1em;
-    box-shadow   : rgb(38 57 77 / 64%) 0px 9px 13px -3px;
-    transition   : 0.3s;
+        &_card {
+            position: relative;
+        }
 
-    &:hover {
-        box-shadow: rgb(38 57 77 / 90%) 0px 17px 16px -4px;
+        .nouveau {
+            position        : absolute;
+            display         : block;
+            background-color: #99E2D0;
+            color           : $darken-green;
+            z-index         : 80;
+            height          : 30px;
+            width           : 80px;
+            text-align      : center;
+            font-size       : 0.8em;
+            border-radius   : 3px;
+            height          : 30px;
+            display         : flex;
+            justify-content : center;
+            flex-direction  : row;
+            align-items     : center;
+            margin-left     : 17.9em;
+            margin-top      : -18em;
+            font-weight     : bold;
+        }
     }
 }
 
@@ -113,13 +108,13 @@ section {
 
 .favorite-checkbox {
     .fas {
-        position                  : relative;
-        font-size                 : 1em;
-        background                : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
-        background-clip           : border-box;
-        -webkit-background-clip   : text;
-        -webkit-text-fill-color   : transparent;
-        text-shadow               : none;
+        position               : relative;
+        font-size              : 1em;
+        background             : linear-gradient(145deg, #ff79da 0%, #9356dc 100%);
+        background-clip        : border-box;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow            : none;
     }
 
     @media (min-width: 1024px) {
@@ -136,7 +131,6 @@ section {
 
     }
 }
-
 
 .favorite-checkbox input,
 .favorite-checkbox .checked {
@@ -156,6 +150,18 @@ section {
     padding-left: 1em;
 }
 
+
+
+// ******************* pages**************************
+
+.titre_img {
+    margin    : 0 auto;
+    display   : block;
+    max-width : 1024px;
+    height    : 260px;
+    object-fit: cover;
+}
+
 .main_div {
     width           : 100%;
     max-width       : 768px;
@@ -165,14 +171,21 @@ section {
     padding-top     : 2em;
     position        : relative;
     top             : -2.6em;
-}
-// ******************* pages**************************
-.titre_img {
-    margin    : 0 auto;
-    display   : block;
-    max-width : 1024px;
-    height    : 260px;
-    object-fit: cover;
+
+    .titre_coeur {
+        display        : flex;
+        flex-direction : row;
+        flex-wrap      : nowrap;
+        align-content  : center;
+        align-items    : center;
+        justify-content: space-between;
+
+        .favorite-checkbox {
+            font-size     : 1.5em;
+            padding-bottom: 11px;
+            padding-right : 10px;
+        }
+    }
 }
 
 .resto_titre_img {
@@ -195,15 +208,15 @@ section {
     overflow        : hidden;
 
     &::before {
-        content     : "";
-        background  : $tertiary-color;
-        display     : inline-block;
-        position    : absolute;
-        height      : 70px;
-        right       : 0%;
-        top         : 0%;
-        transition  : all .4s ease-out;
-        width       : 0%;
+        content   : "";
+        background: $tertiary-color;
+        display   : inline-block;
+        position  : absolute;
+        height    : 70px;
+        right     : 0%;
+        top       : 0%;
+        transition: all .4s ease-out;
+        width     : 0%;
     }
 
     &:hover::before {
@@ -235,14 +248,6 @@ section {
     }
 }
 
-
-.prix {
-    font-weight: bold;
-    transition : all .4s ease-out;
-}
-
-
-
 .carte__1 {
     animation: slideup ease-in-out .5s;
 }
@@ -267,15 +272,6 @@ section {
     }
 }
 
-.condiment {
-    display      : inline-block;
-    font-size    : 0.9em;
-    white-space  : nowrap;
-    overflow     : hidden;
-    text-overflow: ellipsis;
-
-}
-
 .box__menu {
     display        : flex;
     flex-wrap      : nowrap;
@@ -283,19 +279,17 @@ section {
     justify-content: space-between;
     align-items    : flex-end;
     margin-top     : 0.4em;
-}
 
-.titre_coeur {
-    display        : flex;
-    flex-direction : row;
-    flex-wrap      : nowrap;
-    align-content  : center;
-    align-items    : center;
-    justify-content: space-between;
+    .condiment {
+        display      : inline-block;
+        font-size    : 0.9em;
+        white-space  : nowrap;
+        overflow     : hidden;
+        text-overflow: ellipsis;
+    }
 
-    .favorite-checkbox {
-        font-size     : 1.5em;
-        padding-bottom: 11px;
-        padding-right : 10px;
+    .prix {
+        font-weight: bold;
+        transition : all .4s ease-out;
     }
 }
