--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ img {
   height: auto;
 }
 
+a {
+  text-decoration: none;
+}
+
 @font-face {
   font-family: "Roboto";
   src: url(https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu4mxK.woff2) format("woff2");
@@ -97,10 +101,6 @@ h6 {
   margin: 0px;
 }
 
-a {
-  text-decoration: none;
-}
-
 .geo {
   background-color: #ebebeb;
   display: flex;
@@ -126,6 +126,12 @@ section {
   width: 100%;
   background-color: #ebebeb;
   padding-top: 1.5rem;
+}
+section .trait_vert {
+  height: 3px;
+  width: 40px;
+  background-color: #99E2D0;
+  margin-top: 9px;
 }
 section .shrik {
   margin: auto;
@@ -361,8 +367,7 @@ header {
   width: 100%;
   height: 3.9rem;
 }
-
-.titre_container {
+header .titre_container {
   display: flex;
   width: 100%;
   height: 3.9rem;
@@ -371,8 +376,7 @@ header {
   justify-content: center;
   align-items: center;
 }
-
-header .arrow {
+header .titre_container .arrow {
   position: absolute;
   left: 2rem;
   top: 1.4rem;
@@ -513,7 +517,6 @@ header .arrow {
 }
 .lds-spinner {
   color: #FF79DA;
-  /* display               : inline-block; */
   position: relative;
   width: 80px;
   height: 80px;
@@ -617,13 +620,6 @@ header .arrow {
   cursor: wait;
 }
 
-.trait_vert {
-  height: 3px;
-  width: 40px;
-  background-color: #99E2D0;
-  margin-top: 9px;
-}
-
 button {
   width: 220px;
   height: 50px;
@@ -654,41 +650,26 @@ footer {
   background-color: #323232;
   padding: 2em 7.5% 2em 7.5%;
 }
-
-footer span {
+footer .footer_container p {
   font-family: "Shrinkhand";
   font-size: 1rem;
-  margin: 0px;
-}
-
-.logo_footer {
-  filter: invert(100%);
-  margin-bottom: 1em;
-  width: 100px;
-  display: none;
-}
-
-.footer_container p {
+  margin: 0em 0em 0.5em 0em;
   margin-bottom: 0.5em;
 }
-
-.fa-utensils, .fa-hands-helping {
+footer .footer_container p .fa-utensils, footer .footer_container p .fa-hands-helping {
   padding-right: 0.5em;
   font-size: 0.8em;
 }
-
-.fa-utensils {
+footer .footer_container p .fa-utensils {
   padding-right: 0.9em;
 }
-
-.mail {
+footer .footer_container a {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   margin: 0px;
   color: white;
 }
-
-a {
+footer .footer_container a .mail {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   margin: 0px;
